# med-nested-agentsmd

./: .cursorrules  .gitignore  AGENTS.docs.md  AGENTS.md  AGENTS.workflow.md  README.md  RELEASE_NOTES.md
.docs/: commit-message-guidelines.md  readme-discovery.md
apps/backend-api/: AGENTS.md  Makefile  eslint.config.js  package-lock.json  package.json
apps/backend-api/src/: server.js  server.test.js
apps/converter-service/: AGENTS.md  Makefile  pyproject.toml
apps/converter-service/app/: __init__.py  main.py
apps/converter-service/tests/: test_health.py
apps/executor-worker/: AGENTS.md  Makefile  pyproject.toml
apps/executor-worker/function/: __init__.py  handler.py
apps/executor-worker/tests/: test_handler.py
apps/frontend-app/: AGENTS.md  Makefile  eslint.config.js  package-lock.json  package.json
apps/frontend-app/src/: App.test.tsx  App.tsx
docs/: README.md
infra/: README.md
