[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "converter-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["fastapi", "pytest", "pytest-cov", "pylint"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
